# VeloIQ

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  README.md  assemble_showcase_gif.py  backup_veloiq_framework.sh  contact.html  deploy-website.sh  index.html  llms.txt  package-lock.json  package.json  pricing.html  publish-pypi.sh  run_tests.sh  showcase.html  solutions.html  styles.css  take_showcase_gif_frames.py  take_studio_screenshots.py
backend/: pyproject.toml  setup.py
backend/alembic/: env.py
backend/safemantiq_framework/: __init__.py  api_schema_gen.py  config.py  crud.py  db.py  factory.py  loader.py  models.py
backend/safemantiq_framework/auth/: __init__.py  admin.py  models.py  permissions.py  router.py  utils.py
backend/safemantiq_framework/cli/: db.py  generate.py  main.py  module.py  new.py  run.py  search.py
backend/safemantiq_framework/scaffold/: .windsurfrules  AGENTS.md  CLAUDE.md
backend/safemantiq_framework/scaffold/.continue/: config.json
backend/safemantiq_framework/scaffold/.cursor/rules/: models.mdc  safemantiq.mdc
backend/safemantiq_framework/scaffold/.github/: copilot-instructions.md
backend/safemantiq_framework/scaffold/backend/: .env.example  api_schema_gen.py  requirements.txt
backend/safemantiq_framework/scaffold/backend/app/: main.py
backend/safemantiq_framework/scaffold/frontend/: package.json  vite.config.ts
backend/safemantiq_framework/scaffold/frontend/src/: App.tsx  allModels.gen.ts  main.tsx
backend/tests/: conftest.py  test_cli_smoke.py  test_crud.py  test_import_schema_relations.py  test_import_schema_taskmanager.py  test_task_manager_auth.py  test_task_manager_cli_smoke.py  test_task_manager_crud.py  test_task_manager_custom_api.py  test_task_manager_generate.py  test_task_manager_rbac.py  test_task_manager_relations.py  test_task_manager_validation.py  test_veloiq_check.py
backend/veloiq-placeholder/: README.md  pyproject.toml
backend/veloiq-placeholder/src/veloiq/: __init__.py
backend/veloiq_framework/: __init__.py  api_schema_gen.py  config.py  crud.py  db.py  extension.py  extension_registry.py  extensions.py  factory.py  jm_config.ini  loader.py  models.py  queries.py  query_crud.py  query_def.py
backend/veloiq_framework/alembic_scaffold/: env.py
backend/veloiq_framework/auth/: __init__.py  admin.py  models.py  permissions.py  router.py  sqladmin_auth.py  utils.py
backend/veloiq_framework/cli/: add_field.py  add_licensing.py  add_model.py  add_relation.py  build.py  check.py  configure_db.py  dashboard.py  db.py  explorer.py  extension_cmds.py  generate.py  import_schema.py  main.py  migrate.py  module.py  new.py  new_extension.py  run.py  scaffold_page.py  search.py  set_title.py
backend/veloiq_framework/scaffold/: .windsurfrules  AGENTS.md  CLAUDE.md  veloiq.toml
backend/veloiq_framework/scaffold/.continue/: config.json
backend/veloiq_framework/scaffold/.cursor/rules/: models.mdc  veloiq.mdc
backend/veloiq_framework/scaffold/.github/: copilot-instructions.md
backend/veloiq_framework/scaffold/backend/: .env.example  api_schema_gen.py  requirements.txt
backend/veloiq_framework/scaffold/backend/app/: main.py
backend/veloiq_framework/scaffold/frontend/: index.html  package.json  vite.config.ts
backend/veloiq_framework/scaffold/frontend/public/i18n/: en.json  es.json
backend/veloiq_framework/scaffold/frontend/src/: App.tsx  allModels.gen.ts  custom_pages.ts  extensions.gen.tsx  main.tsx  navigation.config.json
backend/veloiq_framework/studio/: __init__.py  router.py
backend/veloiq_framework/studio/static/: index.html
backend/veloiq_framework/studio/static/assets/: index-1sAlw7_K.js  index-642OdMcB.js  index-B3j0cW9Y.js  index-B6H07AdI.js  index-BC_AzFlf.js  index-BWCl6QCK.js  index-BXFGjWZW.js  index-BYXvyUFd.js  index-BYvS3EsL.js  index-Bg4YPquM.css  index-Bi8sCA60.css  index-Bj7qkUEk.js  index-C0h7tczt.js  index-CYWPPT5u.js  index-DCnmlI3K.js  index-DOGgdHvp.css  index-DVA004wm.js  index-DVzPWM3u.css  index-Df3rrXKF.js  index-DoqdoIh0.css  index-DuAQERkD.js  index-WMWE-d92.js  index-ZR04OuGV.css  index-gtyOziIk.js
backend/veloiq_framework/utils/: data_mgmt_utils.py  i18n_utils.py  views_utils.py
docs/: cli-tools.md  configuration-reference.md  getting-started.md  module-authoring.md  online-retail-extension.md  open-core.md  quickstart.md  scaffold-page.md  tutorial-import-schema.md  tutorial-task-manager.md
framework_adoption/: .gitignore  kpis_from_github.py  veloiq_traffic_history.csv
samples/task-manager/: .gitignore  README.md  quickstart.ps1  quickstart.sh  start.ps1  start.sh  veloiq.toml
samples/task-manager/backend/: .env.example  api_schema_gen.py  potential_deterministic_plans.txt  requirements.txt  seed_sqlite.py  taskmanager.db  views_preferences.json
samples/task-manager/backend/app/: main.py
samples/task-manager/backend/app/modules/projects/: api.py  models.py  queries.py
samples/task-manager/backend/app/modules/tasks/: api.py  custom_api.py  models.py
samples/task-manager/backend/app/modules/team/: api.py  models.py
samples/task-manager/backend/config/: api_tools_registry.json  page_configs.json  page_template_assignments.json  search.json  views_configuration.json
samples/task-manager/backend/config/business_rules/: business_rules.json
samples/task-manager/backend/config/journeys/: journey_instances.json  user_journey_configuration.json
samples/task-manager/backend/page_templates/: test_resolve_styling.json  test_styling_template.json
samples/task-manager/frontend/: package-lock.json  package.json  vite.config.ts
samples/task-manager/frontend/src/: App.tsx  allModels.gen.ts  custom_pages.ts  extensions.gen.tsx  navigation.config.json
samples/task-manager/frontend/src/pages/journey/: journeySchema.gen.ts  journeySchema.manual.ts  journeySchema.ts
samples/task-manager/frontend/src/pages/nlp/: nlpSchema.gen.ts  nlpSchema.manual.ts  nlpSchema.ts
samples/task-manager/frontend/src/pages/pageconfig/: pageconfigSchema.gen.ts  (+2 more)
website/: contact.html  index.html  pricing.html  showcase.html  solutions.html  styles.css
(+18 files in other folders)
