[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veloiq-framework"
version = "0.8.4"
description = "VeloIQ™ — AI-native FastAPI + React admin framework. The speed of No-Code. The power of Pro-Code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "JuiceMantics", email = "cesar.lugo.marcos@juicemantics.com" }]
keywords = ["fastapi", "sqlmodel", "admin", "framework", "AI", "ERP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# ── Core dependencies (always installed) ─────────────────────────────────────
dependencies = [
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.14,<1.0",
    "sqlalchemy>=2.0.25,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "sqladmin>=0.16",
    "click>=8.0",
    "python-dotenv>=1.0",
    "typing-extensions>=4.9",
    "tomli>=2.0; python_version < '3.11'",
]

# ── Project URLs ──────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://veloiq.dev"
Repository = "https://github.com/cesarlugos1s/VeloIQ"
Documentation = "https://github.com/cesarlugos1s/VeloIQ/tree/main/docs"
"Bug Tracker" = "https://github.com/cesarlugos1s/VeloIQ/issues"

# ── Optional extras ───────────────────────────────────────────────────────────
[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
ai = [
    "openai>=1.0",
    "langchain>=0.2",
    "langgraph>=0.1",
]
analytics = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "statsmodels>=0.14",
]
all = ["veloiq-framework[postgres,ai,analytics]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.3",
    "mypy>=1.8",
]

# ── CLI entry point ───────────────────────────────────────────────────────────
[project.scripts]
veloiq = "veloiq_framework.cli.main:cli"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["veloiq_framework*"]

# Include scaffold templates and static assets in the distribution.
[tool.setuptools.package-data]
"veloiq_framework" = [
    "scaffold/**/*",
    "scaffold/.windsurfrules",
    "scaffold/.cursor/rules/*",
    "scaffold/.github/*",
    "scaffold/.continue/*",
    "scaffold/backend/.env.example",
    "alembic_scaffold/**/*",
    "alembic_scaffold.ini",
]

# ── Ruff (linting) ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--junit-xml=tests/results.xml --html=tests/results.html --self-contained-html"
markers = ["slow: end-to-end CLI tests (deselected by default in run_tests.sh)"]
